feat(bench): bench same binary twice to measure variance, label as run 1 / run 2

--- a/.github/workflows/bench-engine.yml
+++ b/.github/workflows/bench-engine.yml
@@ -1,8 +1,8 @@
 # Runs engine benchmarks by replaying real blocks via the Engine API against a reth
 # node backed by a local snapshot managed with schelk.
 #
-# Benchmarks are run sequentially: first on main (baseline), then on the feature
-# branch (candidate). Charts overlay both runs for comparison.
+# Runs the same binary twice on the same block range (snapshot recovered between
+# runs) to measure variance and overlay both runs on charts.
 #
 # The self-hosted runner must have:
 #   - schelk initialised (virgin + scratch volumes, ramdisk)
@@ -55,49 +55,24 @@ jobs:
       - uses: dtolnay/rust-toolchain@stable
       - uses: mozilla-actions/sccache-action@v0.0.9
 
-      # ── Build binaries for both branches (in parallel) ────────────
-      - name: Build binaries
+      # ── Build binaries ─────────────────────────────────────────────
+      - name: Fetch or build binaries
         run: |
           MC="mc --config-dir /home/ubuntu/.mc"
-          FEAT_COMMIT="${{ github.event.pull_request.head.sha || github.sha }}"
-          MAIN_SHA=$(git rev-parse origin/main 2>/dev/null || echo "")
-          mkdir -p /tmp/bench-bin/{main,feature}
-          rustup show active-toolchain || rustup default stable
+          COMMIT="${{ github.event.pull_request.head.sha || github.sha }}"
+          BUCKET="minio/reth-binaries/${COMMIT}"
 
-          fetch_or_build() {
-            local label=$1 commit=$2 srcdir=$3 outdir=$4
-            local bucket="minio/reth-binaries/${commit}"
-
-            if $MC stat "${bucket}/reth" &>/dev/null && $MC stat "${bucket}/reth-bench" &>/dev/null; then
-              echo "Cache hit for ${label} ${commit}"
-              $MC cp "${bucket}/reth" "${outdir}/reth"
-              $MC cp "${bucket}/reth-bench" "${outdir}/reth-bench"
-              chmod +x "${outdir}"/*
-            else
-              echo "Cache miss for ${label} ${commit}, building..."
-              make -C "${srcdir}" profiling
-              cargo install --path "${srcdir}/bin/reth-bench" --profile profiling --root "${outdir}"
-              cp "${srcdir}/target/profiling/reth" "${outdir}/reth"
-              mv "${outdir}/bin/reth-bench" "${outdir}/reth-bench"
-              rm -rf "${outdir}/bin" "${outdir}/.crates.toml" "${outdir}/.crates2.json"
-            fi
-          }
-
-          # Build main in a worktree (parallel with feature) on PRs
-          if [ -n "$MAIN_SHA" ] && [ "${{ github.event_name }}" = "pull_request" ]; then
-            git worktree add /tmp/reth-main origin/main
-            fetch_or_build "main" "$MAIN_SHA" "/tmp/reth-main" "/tmp/bench-bin/main" &
-            MAIN_PID=$!
-          fi
-
-          # Build feature in the current worktree
-          fetch_or_build "feature" "$FEAT_COMMIT" "." "/tmp/bench-bin/feature" &
-          FEAT_PID=$!
-
-          wait $FEAT_PID || exit 1
-          if [ -n "${MAIN_PID:-}" ]; then
-            wait $MAIN_PID || exit 1
-            git worktree remove /tmp/reth-main
+          if $MC stat "${BUCKET}/reth" &>/dev/null && $MC stat "${BUCKET}/reth-bench" &>/dev/null; then
+            echo "Cache hit for ${COMMIT}, downloading binaries..."
+            mkdir -p target/profiling
+            $MC cp "${BUCKET}/reth" target/profiling/reth
+            $MC cp "${BUCKET}/reth-bench" /home/ubuntu/.cargo/bin/reth-bench
+            chmod +x target/profiling/reth /home/ubuntu/.cargo/bin/reth-bench
+          else
+            echo "Cache miss for ${COMMIT}, building from source..."
+            rustup show active-toolchain || rustup default stable
+            make profiling
+            make install-reth-bench
           fi
 
       # ── Clean up any leftover state ───────────────────────────────
@@ -106,17 +81,15 @@ jobs:
           pkill -9 reth || true
           mountpoint -q "$SCHELK_MOUNT" && sudo schelk recover -y || true
 
-      # ── Run baseline (main) benchmark on PRs ─────────────────────
-      - name: Mount snapshot (main)
-        if: github.event_name == 'pull_request'
+      # ── Run 1 ──────────────────────────────────────────────────────
+      - name: Mount snapshot (run 1)
         run: |
           sudo schelk mount -y
           sudo sh -c 'echo 3 > /proc/sys/vm/drop_caches'
 
-      - name: Start reth (main)
-        if: github.event_name == 'pull_request'
+      - name: Start reth (run 1)
         run: |
-          /tmp/bench-bin/main/reth node \
+          target/profiling/reth node \
             --datadir "$SCHELK_MOUNT/datadir" \
             --authrpc.jwtsecret "$JWT_SECRET" \
             --debug.startup-sync-state-idle \
@@ -126,7 +99,7 @@ jobs:
             --ws \
             --ws.api all \
             --authrpc.port 8551 \
-            > /tmp/reth-bench-node-main.log 2>&1 &
+            > /tmp/reth-bench-node-run1.log 2>&1 &
 
           echo "RETH_PID=$!" >> "$GITHUB_ENV"
 
@@ -135,112 +108,37 @@ jobs:
               -H 'Content-Type: application/json' \
               -d '{"jsonrpc":"2.0","method":"eth_blockNumber","params":[],"id":1}' \
               > /dev/null 2>&1; then
-              echo "reth (main) is ready after ${i}s"
+              echo "reth (run 1) is ready after ${i}s"
               break
             fi
             if [ "$i" -eq 60 ]; then
-              echo "::error::reth (main) failed to start within 60s"
-              cat /tmp/reth-bench-node-main.log
+              echo "::error::reth (run 1) failed to start within 60s"
+              cat /tmp/reth-bench-node-run1.log
               exit 1
             fi
             sleep 1
           done
 
-      - name: Warmup (main)
-        if: github.event_name == 'pull_request'
+      - name: Warmup (run 1)
         run: |
-          /tmp/bench-bin/main/reth-bench new-payload-fcu \
+          reth-bench new-payload-fcu \
             --rpc-url "$BENCH_RPC_URL" \
             --engine-rpc-url http://127.0.0.1:8551 \
             --jwt-secret "$JWT_SECRET" \
             --advance 50 \
             --reth-new-payload
 
-      - name: Run benchmark (main)
-        if: github.event_name == 'pull_request'
+      - name: Run benchmark (run 1)
         run: |
-          /tmp/bench-bin/main/reth-bench new-payload-fcu \
+          reth-bench new-payload-fcu \
             --rpc-url "$BENCH_RPC_URL" \
             --engine-rpc-url http://127.0.0.1:8551 \
             --jwt-secret "$JWT_SECRET" \
             --advance "$BENCH_BLOCKS" \
             --reth-new-payload \
-            --output /tmp/bench-results-main
+            --output /tmp/bench-results-run1
 
-      - name: Stop reth (main)
-        if: github.event_name == 'pull_request' && always()
-        run: |
-          if [ -n "${RETH_PID:-}" ] && kill -0 "$RETH_PID" 2>/dev/null; then
-            kill "$RETH_PID"
-            for i in $(seq 1 30); do
-              kill -0 "$RETH_PID" 2>/dev/null || break
-              sleep 1
-            done
-            kill -9 "$RETH_PID" 2>/dev/null || true
-          fi
-
-      - name: Recover snapshot (main)
-        if: github.event_name == 'pull_request' && always()
-        run: mountpoint -q "$SCHELK_MOUNT" && sudo schelk recover -y || true
-
-      # ── Run feature branch benchmark ──────────────────────────────
-      - name: Mount snapshot (feature)
-        run: |
-          sudo schelk mount -y
-          sudo sh -c 'echo 3 > /proc/sys/vm/drop_caches'
-
-      - name: Start reth (feature)
-        run: |
-          /tmp/bench-bin/feature/reth node \
-            --datadir "$SCHELK_MOUNT/datadir" \
-            --authrpc.jwtsecret "$JWT_SECRET" \
-            --debug.startup-sync-state-idle \
-            --engine.accept-execution-requests-hash \
-            --http \
-            --http.port 8545 \
-            --ws \
-            --ws.api all \
-            --authrpc.port 8551 \
-            > /tmp/reth-bench-node.log 2>&1 &
-
-          echo "RETH_PID=$!" >> "$GITHUB_ENV"
-
-          for i in $(seq 1 60); do
-            if curl -sf http://127.0.0.1:8545 -X POST \
-              -H 'Content-Type: application/json' \
-              -d '{"jsonrpc":"2.0","method":"eth_blockNumber","params":[],"id":1}' \
-              > /dev/null 2>&1; then
-              echo "reth (feature) is ready after ${i}s"
-              break
-            fi
-            if [ "$i" -eq 60 ]; then
-              echo "::error::reth (feature) failed to start within 60s"
-              cat /tmp/reth-bench-node.log
-              exit 1
-            fi
-            sleep 1
-          done
-
-      - name: Warmup (feature)
-        run: |
-          /tmp/bench-bin/feature/reth-bench new-payload-fcu \
-            --rpc-url "$BENCH_RPC_URL" \
-            --engine-rpc-url http://127.0.0.1:8551 \
-            --jwt-secret "$JWT_SECRET" \
-            --advance 50 \
-            --reth-new-payload
-
-      - name: Run benchmark (feature)
-        run: |
-          /tmp/bench-bin/feature/reth-bench new-payload-fcu \
-            --rpc-url "$BENCH_RPC_URL" \
-            --engine-rpc-url http://127.0.0.1:8551 \
-            --jwt-secret "$JWT_SECRET" \
-            --advance "$BENCH_BLOCKS" \
-            --reth-new-payload \
-            --output /tmp/bench-results
-
-      - name: Stop reth (feature)
+      - name: Stop reth (run 1)
         if: always()
         run: |
           if [ -n "${RETH_PID:-}" ] && kill -0 "$RETH_PID" 2>/dev/null; then
@@ -252,7 +150,80 @@ jobs:
             kill -9 "$RETH_PID" 2>/dev/null || true
           fi
 
-      - name: Recover snapshot (feature)
+      - name: Recover snapshot (run 1)
+        if: always()
+        run: mountpoint -q "$SCHELK_MOUNT" && sudo schelk recover -y || true
+
+      # ── Run 2 ──────────────────────────────────────────────────────
+      - name: Mount snapshot (run 2)
+        run: |
+          sudo schelk mount -y
+          sudo sh -c 'echo 3 > /proc/sys/vm/drop_caches'
+
+      - name: Start reth (run 2)
+        run: |
+          target/profiling/reth node \
+            --datadir "$SCHELK_MOUNT/datadir" \
+            --authrpc.jwtsecret "$JWT_SECRET" \
+            --debug.startup-sync-state-idle \
+            --engine.accept-execution-requests-hash \
+            --http \
+            --http.port 8545 \
+            --ws \
+            --ws.api all \
+            --authrpc.port 8551 \
+            > /tmp/reth-bench-node-run2.log 2>&1 &
+
+          echo "RETH_PID=$!" >> "$GITHUB_ENV"
+
+          for i in $(seq 1 60); do
+            if curl -sf http://127.0.0.1:8545 -X POST \
+              -H 'Content-Type: application/json' \
+              -d '{"jsonrpc":"2.0","method":"eth_blockNumber","params":[],"id":1}' \
+              > /dev/null 2>&1; then
+              echo "reth (run 2) is ready after ${i}s"
+              break
+            fi
+            if [ "$i" -eq 60 ]; then
+              echo "::error::reth (run 2) failed to start within 60s"
+              cat /tmp/reth-bench-node-run2.log
+              exit 1
+            fi
+            sleep 1
+          done
+
+      - name: Warmup (run 2)
+        run: |
+          reth-bench new-payload-fcu \
+            --rpc-url "$BENCH_RPC_URL" \
+            --engine-rpc-url http://127.0.0.1:8551 \
+            --jwt-secret "$JWT_SECRET" \
+            --advance 50 \
+            --reth-new-payload
+
+      - name: Run benchmark (run 2)
+        run: |
+          reth-bench new-payload-fcu \
+            --rpc-url "$BENCH_RPC_URL" \
+            --engine-rpc-url http://127.0.0.1:8551 \
+            --jwt-secret "$JWT_SECRET" \
+            --advance "$BENCH_BLOCKS" \
+            --reth-new-payload \
+            --output /tmp/bench-results
+
+      - name: Stop reth (run 2)
+        if: always()
+        run: |
+          if [ -n "${RETH_PID:-}" ] && kill -0 "$RETH_PID" 2>/dev/null; then
+            kill "$RETH_PID"
+            for i in $(seq 1 30); do
+              kill -0 "$RETH_PID" 2>/dev/null || break
+              sleep 1
+            done
+            kill -9 "$RETH_PID" 2>/dev/null || true
+          fi
+
+      - name: Recover snapshot (run 2)
         if: always()
         run: mountpoint -q "$SCHELK_MOUNT" && sudo schelk recover -y || true
 
@@ -272,8 +243,8 @@ jobs:
         run: |
           curl -LsSf https://astral.sh/uv/install.sh | sh
           CHART_ARGS="/tmp/bench-results/combined_latency.csv --output-dir /tmp/bench-charts"
-          if [ -f /tmp/bench-results-main/combined_latency.csv ]; then
-            CHART_ARGS="$CHART_ARGS --baseline /tmp/bench-results-main/combined_latency.csv"
+          if [ -f /tmp/bench-results-run1/combined_latency.csv ]; then
+            CHART_ARGS="$CHART_ARGS --baseline /tmp/bench-results-run1/combined_latency.csv"
           fi
           uv run --with matplotlib python3 .github/scripts/bench-engine-charts.py $CHART_ARGS
 
@@ -284,7 +255,7 @@ jobs:
           name: bench-engine-results
           path: |
             /tmp/bench-results/
-            /tmp/bench-results-main/
+            /tmp/bench-results-run1/
             /tmp/bench-summary.json
             /tmp/bench-charts/
 
@@ -382,5 +353,5 @@ jobs:
         with:
           name: reth-node-log
           path: |
-            /tmp/reth-bench-node-main.log
-            /tmp/reth-bench-node.log
+            /tmp/reth-bench-node-run1.log
+            /tmp/reth-bench-node-run2.log
