feat: thread-local ConsistentProvider cache for BlockchainProvider
Add per-thread caching of ConsistentProvider using the thread_local
crate to avoid opening a new database read transaction for every
provider trait method call on BlockchainProvider.

The caching is opt-in via a scoped guard API
(consistent_provider_cache_scope) to keep DB transactions short-lived.
Inside the scope, a single ConsistentProvider is reused across all
trait method calls on the current thread.

Invalidation is handled via:
- A monotonic canonical revision counter bumped on forkchoice updates
  and canonical head/safe/finalized changes
- A TTL (500ms) to prevent stale read transactions

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -700,6 +700,7 @@ sysinfo = { version = "0.38", default-features = false }
 tracing-journald = "0.3"
 tracing-logfmt = "=0.3.5"
 tracing-samply = "0.1"
+thread_local = "1.1"
 tracing-subscriber = { version = "0.3", default-features = false }
 tracing-tracy = "0.11"
 triehash = "0.8"
