fix(bench): enable cancel-in-progress for bench workflow

--- a/.github/workflows/bench-engine.yml
+++ b/.github/workflows/bench-engine.yml
@@ -35,7 +35,7 @@ env:
 
 concurrency:
   group: bench-engine
-  cancel-in-progress: false
+  cancel-in-progress: true
 
 permissions:
   contents: write
