perf(trie): use ArrayVec for LeafUpdate::Changed to avoid heap allocation
Change LeafUpdate::Changed variant from Vec<u8> to ArrayVec<u8, 110>
where 110 is TRIE_ACCOUNT_RLP_MAX_SIZE. This avoids heap allocations
when creating leaf updates for both storage slots and accounts.

- Storage slots: encode_fixed_size returns ArrayVec directly, extended
  into the larger ArrayVec (stack-to-stack copy)
- Accounts: encode into reusable Vec buffer, then copy to ArrayVec

--- a/crates/engine/tree/Cargo.toml
+++ b/crates/engine/tree/Cargo.toml
@@ -49,6 +49,7 @@ revm.workspace = true
 revm-primitives.workspace = true
 
 # common
+arrayvec.workspace = true
 futures.workspace = true
 thiserror.workspace = true
 tokio = { workspace = true, features = ["rt", "rt-multi-thread", "sync", "macros"] }
