--- a/crates/storage/mdbx-viz/Cargo.toml
+++ b/crates/storage/mdbx-viz/Cargo.toml
@@ -20,3 +20,4 @@ tracing.workspace = true
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 rayon.workspace = true
 eyre.workspace = true
+libc = "0.2"
